--- a/Assignment 3 Practice.ipynb
+++ b/Assignment 3 Practice.ipynb
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -344,54 +344,54 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "7/7 [==============================] - 2s 217ms/step - loss: 0.2200 - accuracy: 0.9125 - val_loss: 0.4560 - val_accuracy: 0.8300\n",
+      "7/7 [==============================] - 3s 391ms/step - loss: 0.7140 - accuracy: 0.5519 - val_loss: 0.5482 - val_accuracy: 0.7100\n",
       "Epoch 2/20\n",
-      "7/7 [==============================] - 1s 179ms/step - loss: 0.2418 - accuracy: 0.8925 - val_loss: 0.5965 - val_accuracy: 0.7800\n",
+      "7/7 [==============================] - 1s 190ms/step - loss: 0.5554 - accuracy: 0.7524 - val_loss: 0.6065 - val_accuracy: 0.6200\n",
       "Epoch 3/20\n",
-      "7/7 [==============================] - 1s 203ms/step - loss: 0.2737 - accuracy: 0.8775 - val_loss: 0.2918 - val_accuracy: 0.8800\n",
+      "7/7 [==============================] - 1s 165ms/step - loss: 0.5224 - accuracy: 0.7213 - val_loss: 0.3635 - val_accuracy: 0.8300\n",
       "Epoch 4/20\n",
-      "7/7 [==============================] - 1s 201ms/step - loss: 0.2010 - accuracy: 0.9200 - val_loss: 0.2476 - val_accuracy: 0.9100\n",
+      "7/7 [==============================] - 1s 167ms/step - loss: 0.3673 - accuracy: 0.8474 - val_loss: 0.3344 - val_accuracy: 0.8500\n",
       "Epoch 5/20\n",
-      "7/7 [==============================] - 1s 201ms/step - loss: 0.1885 - accuracy: 0.9275 - val_loss: 0.3970 - val_accuracy: 0.8200\n",
+      "7/7 [==============================] - 1s 204ms/step - loss: 0.2975 - accuracy: 0.8763 - val_loss: 0.2960 - val_accuracy: 0.8700\n",
       "Epoch 6/20\n",
-      "7/7 [==============================] - 2s 279ms/step - loss: 0.2105 - accuracy: 0.9250 - val_loss: 0.3591 - val_accuracy: 0.8400\n",
+      "7/7 [==============================] - 1s 171ms/step - loss: 0.2903 - accuracy: 0.8811 - val_loss: 0.4499 - val_accuracy: 0.8100\n",
       "Epoch 7/20\n",
-      "7/7 [==============================] - 2s 225ms/step - loss: 0.1504 - accuracy: 0.9450 - val_loss: 0.3434 - val_accuracy: 0.8600\n",
+      "7/7 [==============================] - 1s 177ms/step - loss: 0.2975 - accuracy: 0.8764 - val_loss: 0.4193 - val_accuracy: 0.8200\n",
       "Epoch 8/20\n",
-      "7/7 [==============================] - 1s 201ms/step - loss: 0.1637 - accuracy: 0.9325 - val_loss: 0.3669 - val_accuracy: 0.8500\n",
+      "7/7 [==============================] - 1s 156ms/step - loss: 0.2689 - accuracy: 0.9082 - val_loss: 0.2871 - val_accuracy: 0.8900\n",
       "Epoch 9/20\n",
-      "7/7 [==============================] - 2s 265ms/step - loss: 0.1709 - accuracy: 0.9375 - val_loss: 0.3480 - val_accuracy: 0.8500\n",
+      "7/7 [==============================] - 1s 188ms/step - loss: 0.3139 - accuracy: 0.8593 - val_loss: 0.2593 - val_accuracy: 0.8900\n",
       "Epoch 10/20\n",
-      "7/7 [==============================] - 2s 274ms/step - loss: 0.2003 - accuracy: 0.9175 - val_loss: 0.2437 - val_accuracy: 0.8900\n",
+      "7/7 [==============================] - 1s 162ms/step - loss: 0.3309 - accuracy: 0.8343 - val_loss: 0.2994 - val_accuracy: 0.8700\n",
       "Epoch 11/20\n",
-      "7/7 [==============================] - 2s 242ms/step - loss: 0.1751 - accuracy: 0.9425 - val_loss: 0.2471 - val_accuracy: 0.9000\n",
+      "7/7 [==============================] - 1s 157ms/step - loss: 0.2523 - accuracy: 0.8832 - val_loss: 0.3439 - val_accuracy: 0.8500\n",
       "Epoch 12/20\n",
-      "7/7 [==============================] - 2s 234ms/step - loss: 0.1756 - accuracy: 0.9300 - val_loss: 0.3277 - val_accuracy: 0.8900\n",
+      "7/7 [==============================] - 1s 180ms/step - loss: 0.1978 - accuracy: 0.9364 - val_loss: 0.4490 - val_accuracy: 0.8100\n",
       "Epoch 13/20\n",
-      "7/7 [==============================] - 2s 231ms/step - loss: 0.1796 - accuracy: 0.9200 - val_loss: 0.3515 - val_accuracy: 0.8500\n",
+      "7/7 [==============================] - 1s 191ms/step - loss: 0.2226 - accuracy: 0.9162 - val_loss: 0.3686 - val_accuracy: 0.8300\n",
       "Epoch 14/20\n",
-      "7/7 [==============================] - 2s 233ms/step - loss: 0.1473 - accuracy: 0.9400 - val_loss: 0.4268 - val_accuracy: 0.8500\n",
+      "7/7 [==============================] - 1s 179ms/step - loss: 0.2564 - accuracy: 0.9045 - val_loss: 0.2698 - val_accuracy: 0.8900\n",
       "Epoch 15/20\n",
-      "7/7 [==============================] - 2s 228ms/step - loss: 0.1461 - accuracy: 0.9375 - val_loss: 0.2987 - val_accuracy: 0.8900\n",
+      "7/7 [==============================] - 2s 221ms/step - loss: 0.2522 - accuracy: 0.8736 - val_loss: 0.2706 - val_accuracy: 0.8900\n",
       "Epoch 16/20\n",
-      "7/7 [==============================] - 2s 254ms/step - loss: 0.1047 - accuracy: 0.9700 - val_loss: 0.2830 - val_accuracy: 0.8800\n",
+      "7/7 [==============================] - 1s 203ms/step - loss: 0.2721 - accuracy: 0.8856 - val_loss: 0.5870 - val_accuracy: 0.8000\n",
       "Epoch 17/20\n",
-      "7/7 [==============================] - 2s 247ms/step - loss: 0.1437 - accuracy: 0.9400 - val_loss: 0.4017 - val_accuracy: 0.8400\n",
+      "7/7 [==============================] - 2s 237ms/step - loss: 0.2516 - accuracy: 0.9064 - val_loss: 0.2533 - val_accuracy: 0.9100\n",
       "Epoch 18/20\n",
-      "7/7 [==============================] - 2s 241ms/step - loss: 0.1156 - accuracy: 0.9700 - val_loss: 0.5215 - val_accuracy: 0.8100\n",
+      "7/7 [==============================] - 2s 263ms/step - loss: 0.2144 - accuracy: 0.9238 - val_loss: 0.2705 - val_accuracy: 0.9000\n",
       "Epoch 19/20\n",
-      "7/7 [==============================] - 2s 254ms/step - loss: 0.1295 - accuracy: 0.9550 - val_loss: 0.2627 - val_accuracy: 0.8900\n",
+      "7/7 [==============================] - 2s 245ms/step - loss: 0.2217 - accuracy: 0.9124 - val_loss: 0.4642 - val_accuracy: 0.8300\n",
       "Epoch 20/20\n",
-      "7/7 [==============================] - 1s 207ms/step - loss: 0.1321 - accuracy: 0.9475 - val_loss: 0.2158 - val_accuracy: 0.9300\n"
+      "7/7 [==============================] - 2s 214ms/step - loss: 0.2158 - accuracy: 0.9260 - val_loss: 0.2691 - val_accuracy: 0.9000\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f7f4cd04dc0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f80c5650670>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -402,10 +402,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "from keras.preprocessing import image\n",
+    "test_image = image.load_img('Lab Assignment 3 Dataset/Single Prediction/3.jpg', target_size = (64, 64))\n",
+    "test_image = image.img_to_array(test_image)\n",
+    "test_image = np.expand_dims(test_image, axis = 0)\n",
+    "result = model.predict(test_image)\n",
+    "if result[0][0] == 1:\n",
+    "    prediction = 'planes'\n",
+    "else:\n",
+    "    prediction = 'cars'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "planes\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(prediction)"
+   ]
   }
  ],
  "metadata": {
